# modulix-daemon

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  module.nix  org.modulix.Daemon.conf  org.modulix.daemon.policy
src/: error.rs  main.rs
src/command/: lifecycle.rs  mod-tests.rs  mod.rs  module-tests.rs  module.rs  package-tests.rs  package.rs  plugin-tests.rs  plugin.rs  setting-tests.rs  setting.rs
src/daemon/: mod-tests.rs  mod.rs
src/listener/: mod-tests.rs  mod.rs
src/listener/hostname1/: mod-tests.rs  mod.rs
src/listener/udisks2/: mod-tests.rs  mod.rs  mount_info-tests.rs  mount_info.rs  proxies.rs
