[package]
name = "modulix-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mx-daemon"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
